--- a/deb/openmediavault-forkeddaapd/debian/changelog
+++ b/deb/openmediavault-forkeddaapd/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-forkeddaapd (3.1.4) stable; urgency=low
+
+  * Harden deinstallation script.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 25 Dec 2016 18:15:48 +0100
+
 openmediavault-forkeddaapd (3.1.3) stable; urgency=low
 
   * Harden installation script.
