--- a/deb/openmediavault-nut/debian/changelog
+++ b/deb/openmediavault-nut/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-nut (3.2.6) stable; urgency=low
+
+  * Harden deinstallation script.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 25 Dec 2016 18:14:08 +0100
+
 openmediavault-nut (3.2.5) stable; urgency=low
 
   * Fix bug in udev rule creation.
