--- a/deb/openmediavault-shairport/debian/changelog
+++ b/deb/openmediavault-shairport/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-shairport (3.2.4) stable; urgency=low
+
+  * Harden deinstallation script.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 25 Dec 2016 18:16:35 +0100
+
 openmediavault-shairport (3.2.3) stable; urgency=low
 
   * Harden installation script.
