--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (3.0.59) stable; urgency=low
 
   * Various improvements.
+  * Use kernel/firmware backports by default.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 28 Dec 2016 22:37:50 +0100
 
