--- a/vagrant/README
+++ b/vagrant/README
@@ -1,8 +1,11 @@
 1. Install VirtualBox
 $ sudo apt-get install virtualbox
 
-2. Download Vagrant from https://www.vagrantup.com/downloads.html
+2. Install NFS kernel server
+$ sudo apt-get install nfs-kernel-server
 
-3. Install plugins
+3. Download Vagrant from https://www.vagrantup.com/downloads.html
+
+4. Install plugins
 $ vagrant plugin install vagrant-vbguest
 $ vagrant plugin install vagrant-cachier
