--- a/deb/openmediavault-shairport/debian/changelog
+++ b/deb/openmediavault-shairport/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-shairport (3.2.5) stable; urgency=low
+
+  * Service is always started, either if it is disabled.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sat, 31 Dec 2016 13:38:45 +0100
+
 openmediavault-shairport (3.2.4) stable; urgency=low
 
   * Harden deinstallation script.
