--- a/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-12-06 06:19+0100\n"
-"PO-Revision-Date: 2016-12-13 07:08+0000\n"
+"PO-Revision-Date: 2016-12-30 19:12+0000\n"
 "Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
@@ -39,7 +39,7 @@ msgid "0 KiB/s means unlimited."
 msgstr "0 KB/s korlátlan."
 
 msgid "1 - Minimum power usage with standby (spindown)"
-msgstr "1 - Minimális energia használat készenléti állapotban (leállítás)"
+msgstr "1 - Minimális energiahasználat készenléti állapotban (leállítás)"
 
 msgid "1 day"
 msgstr "1 nap"
@@ -67,10 +67,10 @@ msgid "120 minutes"
 msgstr "120 perc"
 
 msgid "127 - Intermediate power usage with standby"
-msgstr "127 - Közepes energia használat készenléti állapotban"
+msgstr "127 - Közepes energiahasználat készenléti állapotban"
 
 msgid "128 - Minimum power usage without standby (no spindown)"
-msgstr "128 - Minimális energia használat készenléti állapot nélkül (nincs leállítás)"
+msgstr "128 - Minimális energiahasználat készenléti állapot nélkül (nincs leállítás)"
 
 msgid "15 years"
 msgstr "15 év"
@@ -79,7 +79,7 @@ msgid "180 minutes"
 msgstr "180 perc"
 
 msgid "192 - Intermediate power usage without standby"
-msgstr "192 - Közepes energia használat készenléti állapot nélkül"
+msgstr "192 - Közepes energiahasználat készenléti állapot nélkül"
 
 msgid "2 days"
 msgstr "2 nap"
@@ -103,7 +103,7 @@ msgid "25 years"
 msgstr "25 év"
 
 msgid "254 - Maximum performance, maximum power usage"
-msgstr "254 - Maximális teljesítmény, teljes energia használat"
+msgstr "254 - Maximális teljesítmény, teljes energiahasználat"
 
 msgid "255 - Disabled"
 msgstr "255 - Letiltva"
@@ -154,7 +154,7 @@ msgid "60 minutes"
 msgstr "60 perc"
 
 msgid "64 - Intermediate power usage with standby"
-msgstr "64 - Közepes energia használat készenléti állapotban"
+msgstr "64 - Közepes energiahasználat készenléti állapotban"
 
 msgid "9 months"
 msgstr "9 hónap"
@@ -629,7 +629,7 @@ msgid "Client address"
 msgstr "Kliens cím"
 
 msgid "Clients allowed to mount the file system, e.g. 192.168.178.0/24."
-msgstr "Kliensek engedélyezése fájlrendszer felcsatoláshoz, pl. 192.168.178.0/24."
+msgstr "Kliensek engedélyezése a fájlrendszer felcsatoláshoz, pl. 192.168.178.0/24."
 
 msgid "Close"
 msgstr "Bezárás"
@@ -703,7 +703,7 @@ msgstr "Kapcsolat"
 msgid ""
 "Contact information, e.g. name or email address of the person responsible "
 "for this system."
-msgstr "Információs kapcsolattartás, pl. a rendszerért felelős személy neve vagy e-mail címe. "
+msgstr "Elérhetőség, pl. a rendszerért felelős személy neve vagy e-mail címe. "
 
 msgid "Conveyance self-test"
 msgstr "Önteszt továbbítása"
@@ -1011,7 +1011,7 @@ msgstr "Minden sor egy csoportot jelöl."
 msgid ""
 "Each line represents one user. Note, the password must be entered in plain "
 "text."
-msgstr "Minden sor egy felhasználót jelöl. Megjegyzés, a jelszót, mint egyszerű szöveget kell beírni."
+msgstr "Minden sor egy felhasználót jelöl. Megjegyzés: A jelszót, mint egyszerű szöveget kell beírni."
 
 msgid "East Timor"
 msgstr "Kelet-Timor"
@@ -1157,7 +1157,7 @@ msgstr "Az ident protokoll engedélyezése (RFC1413)"
 msgid ""
 "Enable this option to keep partially transferred files, otherwise they will "
 "be deleted if the transfer is interrupted."
-msgstr "Engedélyezd eszt az opciót, hogy megtartsa a részben átküldött fájlokat, ellenkező esetben törlésre kerülnek, ha az átvitel megszakad"
+msgstr "Engedélyezd eszt az opciót, hogy megtartsa a részben átküldött fájlokat, ellenkező esetben törlésre kerülnek, ha az átvitel megszakad."
 
 msgid "Enable transfer log"
 msgstr "Átviteli napló engedélyezése"
@@ -1169,7 +1169,7 @@ msgid "Enable user home directories"
 msgstr "Felhasználói saját könyvtárak engedélyezése"
 
 msgid "Enable write-cache."
-msgstr "Gyorsítótár engedélyezése"
+msgstr "Gyorsítótár engedélyezése."
 
 msgid "Enabled"
 msgstr "Engedélyezve"
@@ -1331,7 +1331,7 @@ msgid "Force SSL/TLS"
 msgstr "SSL/TLS kényszerítés"
 
 msgid "Force secure connection only."
-msgstr "Csak biztonságos kapcsolat kényszerítése"
+msgstr "Csak biztonságos kapcsolat kényszerítése."
 
 msgid "France"
 msgstr "Franciaország"
@@ -2307,7 +2307,7 @@ msgid "Password authentication"
 msgstr "Jelszó hitelesítés"
 
 msgid "Passwords don't match"
-msgstr "Jelszavak nem egyeznek meg"
+msgstr "A jelszavak nem egyeznek"
 
 msgid "Paste a RSA certificate in X.509 PEM format here."
 msgstr "Illessz be egy X.509 PEM formátumú RSA tanúsítványt ide."
@@ -2693,7 +2693,7 @@ msgstr "UI alapértékek visszaállítása"
 msgid ""
 "Reset the UI settings to their default values, e.g. the order of the grid "
 "columns."
-msgstr "Az UI beállítások visszaállítása alap értékekre, mint például a rács oszlop sorrend."
+msgstr "Az UI beállítások visszaállítása alapértelmezett értékekre, mint például a rács és oszlop sorrend."
 
 msgid "Resize"
 msgstr "Átméretezés"
@@ -2924,7 +2924,7 @@ msgid "Select devices to be removed from the RAID device."
 msgstr "Kiválasztott meghajtók eltávolítása a RAID tömbből"
 
 msgid "Select or enter a user name ..."
-msgstr "Válassz ki vagy írj be egy felhasználó nevet"
+msgstr "Válassz ki, vagy írj be egy felhasználó nevet"
 
 msgid "Self-test logs"
 msgstr "Önteszt naplók"
@@ -3260,7 +3260,7 @@ msgid "System"
 msgstr "Rendszer"
 
 msgid "System Information"
-msgstr "Rendszer-információ"
+msgstr "Rendszer információ"
 
 msgid "System Logs"
 msgstr "Rendszernaplók"
@@ -3430,7 +3430,7 @@ msgid "The specified quota exceeds the max. possible value of 4TiB."
 msgstr "A megadott kvóta meghaladja a max. lehetséges 4TB értéket."
 
 msgid "The system will reboot now. This may take some time ..."
-msgstr "A rendszer most újraindul. Ez eltarthat egy ideig ..."
+msgstr "A rendszer most újraindul. Ez eltarthat egy ideig."
 
 msgid "The test email has been sent successfully. Please check your mailbox."
 msgstr "A teszt e-mail sikeresen elküldve. Kérlek tekintsd meg a postaládádat."
