--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.60) stable; urgency=low
+
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 01 Jan 2017 15:57:55 +0100
+
 openmediavault (3.0.59) stable; urgency=low
 
   * Update locales.
