--- a/deb/openmediavault-shairport/debian/changelog
+++ b/deb/openmediavault-shairport/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-shairport (3.2.6) stable; urgency=low
+
+  * Fix 'There is no service by that name' issue when starting the service.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 02 Jan 2017 11:34:37 +0100
+
 openmediavault-shairport (3.2.5) stable; urgency=low
 
   * Service is always started, either if it is disabled.
