--- a/deb/openmediavault-nut/debian/changelog
+++ b/deb/openmediavault-nut/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-nut (3.2.7) stable; urgency=low
+
+  * Fix 'There is no service by that name' issue when starting the service.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 02 Jan 2017 11:40:40 +0100
+
 openmediavault-nut (3.2.6) stable; urgency=low
 
   * Harden deinstallation script.
