Introduce configuration database migration backend.
Execute 'omv-configadm migrate <plugin> <version>' to migrate the configuration database to the latest version.

The omv-configadm command can be extended via plugins.

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (3.0.60) stable; urgency=low
 
   * Various improvements.
+  * Introduce configuration database migration backend.
   * Mantis 0001657: Append 'nofail' to NFS bind mounts to prevent systemd to
     start into the emergency-mode due to unmet dependencies.
   * Mantis 0001658: filesystem class vs mountpoint class.
