--- a/deb/openmediavault/usr/share/openmediavault/confdb/migrations.d/README
+++ b/deb/openmediavault/usr/share/openmediavault/confdb/migrations.d/README
@@ -1,4 +1,4 @@
-Put your configuration database migration scripts here. The files must
+Put your configuration database migration shell scripts here. The files must
 look like:
 
 <PLUGINNAME>_<VERSION>[.<EXT>]
@@ -6,4 +6,3 @@ look like:
 Example:
 openmediavault-route_0.5.3
 openmediavault-shairport_1.5.0.1.sh
-openmediavault-ldap_3.1.py
