--- a/deb/openmediavault/usr/share/openmediavault/confdb/delete.d/README
+++ b/deb/openmediavault/usr/share/openmediavault/confdb/delete.d/README
@@ -1,4 +1,4 @@
-Put your configuration database deletion scripts here. The files must
+Put your configuration database deletion shell scripts here. The files must
 look like:
 
 <PLUGINNAME>[.<EXT>]
@@ -6,4 +6,3 @@ look like:
 Example:
 openmediavault-route
 openmediavault-shairport.sh
-openmediavault-ldap.py
