Use the datamodel ID instead of the plugin name for the omv-confdbadm scripts.

--- a/deb/openmediavault/usr/share/openmediavault/confdb/delete.d/README
+++ b/deb/openmediavault/usr/share/openmediavault/confdb/delete.d/README
@@ -1,8 +1,8 @@
 Put your configuration database deletion shell scripts here. The files must
 look like:
 
-<PLUGINNAME>[.<EXT>]
+<DATAMODELID>[.<EXT>]
 
 Example:
-openmediavault-route
-openmediavault-shairport.sh
+conf.service.clamav
+conf.service.clamav.sh
