--- a/deb/openmediavault/usr/share/openmediavault/confdb/migrations.d/README
+++ b/deb/openmediavault/usr/share/openmediavault/confdb/migrations.d/README
@@ -1,8 +1,8 @@
 Put your configuration database migration shell scripts here. The files must
 look like:
 
-<PLUGINNAME>_<VERSION>[.<EXT>]
+<DATAMODELID>_<VERSION>[.<EXT>]
 
 Example:
-openmediavault-route_0.5.3
-openmediavault-shairport_1.5.0.1.sh
+conf.service.clamav_0.5.3
+conf.service.clamav_1.5.0.1.sh
