--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -2,6 +2,8 @@ openmediavault (3.0.60) stable; urgency=low
 
   * Various improvements.
   * Introduce configuration database migration backend.
+  * Notify FTP TLS and BAN list configuration changes.
+  * Use TLSv1.2 for secure FTP connections.
   * Mantis 0001657: Append 'nofail' to NFS bind mounts to prevent systemd to
     start into the emergency-mode due to unmet dependencies.
   * Mantis 0001658: filesystem class vs mountpoint class.
