--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -9,6 +9,8 @@ openmediavault (3.0.60) stable; urgency=low
   * Mantis 0001658: filesystem class vs mountpoint class.
   * Mantis 0001659: Adapt network backend to support predictable network
     interface names.
+  * Mantis 0001666: Cannot creaet NFS shares of btrfs subvolumes with names
+    prefixed by an '@' symbol.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sun, 01 Jan 2017 15:57:55 +0100
 
