Add ca_ES (Catalán) language support.

--- a/deb/openmediavault-lvm2/usr/share/openmediavault/locale/ru_RU/openmediavault-lvm2.po
+++ b/deb/openmediavault-lvm2/usr/share/openmediavault/locale/ru_RU/openmediavault-lvm2.po
@@ -6,7 +6,7 @@
 # Alexander Savchenko, 2014
 # Ichi <ichiperm@gmail.com>, 2012
 # mictian <ffrants@gmail.com>, 2012
-# артур Мудрых <arturmon82@gmail.com>, 2012,2015
+# Артур Мудрых <arturmon82@gmail.com>, 2012,2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
