--- a/deb/openmediavault-route/usr/share/openmediavault/locale/ru_RU/openmediavault-route.po
+++ b/deb/openmediavault-route/usr/share/openmediavault/locale/ru_RU/openmediavault-route.po
@@ -4,7 +4,7 @@
 # 
 # Translators:
 # Alexander Savchenko <>, 2013
-# артур Мудрых <arturmon82@gmail.com>, 2012
+# Артур Мудрых <arturmon82@gmail.com>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
