--- a/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/ru_RU/openmediavault-usbbackup.po
+++ b/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/ru_RU/openmediavault-usbbackup.po
@@ -4,7 +4,7 @@
 # 
 # Translators:
 # Alexander Savchenko, 2014
-# артур Мудрых <arturmon82@gmail.com>, 2013,2015
+# Артур Мудрых <arturmon82@gmail.com>, 2013,2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
