--- a/deb/openmediavault-clamav/usr/share/openmediavault/locale/ru_RU/openmediavault-clamav.po
+++ b/deb/openmediavault-clamav/usr/share/openmediavault/locale/ru_RU/openmediavault-clamav.po
@@ -7,7 +7,7 @@
 # Alexander Savchenko <>, 2012
 # Alexander Savchenko, 2014
 # mictian <ffrants@gmail.com>, 2012
-# артур Мудрых <arturmon82@gmail.com>, 2012-2013
+# Артур Мудрых <arturmon82@gmail.com>, 2012-2013
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
