--- a/deb/openmediavault-forkeddaapd/usr/share/openmediavault/locale/ru_RU/openmediavault-forkeddaapd.po
+++ b/deb/openmediavault-forkeddaapd/usr/share/openmediavault/locale/ru_RU/openmediavault-forkeddaapd.po
@@ -4,7 +4,7 @@
 # 
 # Translators:
 # mictian <ffrants@gmail.com>, 2012
-# артур Мудрых <arturmon82@gmail.com>, 2012-2013
+# Артур Мудрых <arturmon82@gmail.com>, 2012-2013
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
