--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/ru_RU/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/ru_RU/openmediavault-netatalk.po
@@ -6,14 +6,14 @@
 # Alexander Savchenko, 2013
 # Alexander Savchenko, 2013
 # mictian <ffrants@gmail.com>, 2012
-# артур Мудрых <arturmon82@gmail.com>, 2012-2013,2015-2016
+# Артур Мудрых <arturmon82@gmail.com>, 2012-2013,2015-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-09-23 21:35+0200\n"
 "PO-Revision-Date: 2016-10-10 15:46+0000\n"
-"Last-Translator: артур Мудрых <arturmon82@gmail.com>\n"
+"Last-Translator: Артур Мудрых <arturmon82@gmail.com>\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/votdev/openmediavault/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
