--- a/deb/openmediavault-nut/usr/share/openmediavault/locale/ru_RU/openmediavault-nut.po
+++ b/deb/openmediavault-nut/usr/share/openmediavault/locale/ru_RU/openmediavault-nut.po
@@ -5,7 +5,7 @@
 # Translators:
 # Alexander Savchenko, 2014
 # mictian <ffrants@gmail.com>, 2012
-# артур Мудрых <arturmon82@gmail.com>, 2012-2013
+# Артур Мудрых <arturmon82@gmail.com>, 2012-2013
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
