--- a/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
@@ -10,14 +10,14 @@
 # Ichi <ichiperm@gmail.com>, 2012
 # mictian <ffrants@gmail.com>, 2012
 # Александр <phg.azlk@gmail.com>, 2012
-# артур Мудрых <arturmon82@gmail.com>, 2012-2013,2015-2016
+# Артур Мудрых <arturmon82@gmail.com>, 2012-2013,2015-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-12-06 06:19+0100\n"
 "PO-Revision-Date: 2016-12-13 07:29+0000\n"
-"Last-Translator: артур Мудрых <arturmon82@gmail.com>\n"
+"Last-Translator: Артур Мудрых <arturmon82@gmail.com>\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/votdev/openmediavault/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
