--- a/deb/openmediavault-ldap/debian/changelog
+++ b/deb/openmediavault-ldap/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-ldap (3.1.4) stable; urgency=low
+
+  * Update locales.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 12 Feb 2017 21:58:47 +0100
+
 openmediavault-ldap (3.1.3) stable; urgency=low
 
   * Update locales.
