--- a/deb/openmediavault-lvm2/debian/changelog
+++ b/deb/openmediavault-lvm2/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-lvm2 (3.1.4) stable; urgency=low
+
+  * Update locales.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 12 Feb 2017 21:59:30 +0100
+
 openmediavault-lvm2 (3.1.3) stable; urgency=low
 
   * Fix bug in RPC datamodel.
