--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/ca_ES/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/ca_ES/openmediavault-netatalk.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the openmediavault-netatalk package.
 # 
 # Translators:
+# Quim Farriol <quim@iscinformatica.cat>, 2017
 # Quim Farriol <quim@iscinformatica.cat>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-09-23 21:35+0200\n"
-"PO-Revision-Date: 2017-02-03 20:49+0000\n"
+"PO-Revision-Date: 2017-02-09 18:20+0000\n"
 "Last-Translator: Quim Farriol <quim@iscinformatica.cat>\n"
 "Language-Team: Catalan (Spain) (http://www.transifex.com/votdev/openmediavault/language/ca_ES/)\n"
 "MIME-Version: 1.0\n"
@@ -64,7 +65,7 @@ msgid "Enable user home directories."
 msgstr "Habilitar Directoris Home d'usuari."
 
 msgid "Enabled"
-msgstr ""
+msgstr "Habilitat"
 
 msgid "Extra options"
 msgstr "Opcions addicionals"
@@ -118,7 +119,7 @@ msgid ""
 "Please check the <a "
 "href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "Per mes detalls visita el <a href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' target='_blank'>manual</a>."
 
 msgid "Quota"
 msgstr "Quota"
