--- a/deb/openmediavault-shairport/usr/share/openmediavault/locale/ca_ES/openmediavault-shairport.po
+++ b/deb/openmediavault-shairport/usr/share/openmediavault/locale/ca_ES/openmediavault-shairport.po
@@ -3,12 +3,13 @@
 # This file is distributed under the same license as the openmediavault-shairport package.
 # 
 # Translators:
+# Quim Farriol <quim@iscinformatica.cat>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-09-24 19:04+0200\n"
-"PO-Revision-Date: 2017-02-03 20:50+0000\n"
+"PO-Revision-Date: 2017-02-09 18:24+0000\n"
 "Last-Translator: Quim Farriol <quim@iscinformatica.cat>\n"
 "Language-Team: Catalan (Spain) (http://www.transifex.com/votdev/openmediavault/language/ca_ES/)\n"
 "MIME-Version: 1.0\n"
@@ -44,4 +45,4 @@ msgstr "Shairport"
 msgid ""
 "The name the service will advertise to clients. Leave this field empty to "
 "use the hostname by default."
-msgstr ""
+msgstr "El nom del servei que se mostra als clients. Deixeu-lo en blanc si voleu usar el nom del host per defecte."
