--- a/deb/openmediavault-forkeddaapd/debian/changelog
+++ b/deb/openmediavault-forkeddaapd/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-forkeddaapd (3.1.6) stable; urgency=low
+
+  * Fix first installation bug.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 13 Feb 2017 22:41:30 +0100
+
 openmediavault-forkeddaapd (3.1.5) stable; urgency=low
 
   * Update locales.
