--- a/deb/openmediavault-netatalk/debian/changelog
+++ b/deb/openmediavault-netatalk/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-netatalk (3.2.7) stable; urgency=low
+
+  * Fix first installation bug.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 13 Feb 2017 22:42:05 +0100
+
 openmediavault-netatalk (3.2.6) stable; urgency=low
 
   * Update locales.
