--- a/deb/openmediavault-shairport/debian/changelog
+++ b/deb/openmediavault-shairport/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-shairport (3.2.8) stable; urgency=low
+
+  * Fix first installation bug.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 13 Feb 2017 22:42:49 +0100
+
 openmediavault-shairport (3.2.7) stable; urgency=low
 
   * Update locales.
