--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.62) stable; urgency=low
+
+  * Fix first installation bug.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 15 Feb 2017 18:23:08 +0100
+
 openmediavault (3.0.61) stable; urgency=low
 
   * Fix first installation bug.
