--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (4.0) stable; urgency=low
+
+  * Initial release.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 22 Feb 2017 13:28:40 +0100
+
 openmediavault (3.0.64) stable; urgency=low
 
   * Fix bug when a non-existent file system will be removed.
