--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (4.0.1) stable; urgency=low
+
+  * Adapt code to Debian 9.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 24 Feb 2017 09:18:32 +0100
+
 openmediavault (4.0) stable; urgency=low
 
   * Initial release.
