--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.65) stable; urgency=low
+
+  * Various bug fixes and improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 24 Feb 2017 13:34:27 +0100
+
 openmediavault (3.0.64) stable; urgency=low
 
   * Various improvements.
