--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (3.0.65) stable; urgency=low
 
   * Various bug fixes and improvements.
+  * Fix bug when executing S.M.A.R.T. tests via WebUI.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 24 Feb 2017 13:34:27 +0100
 
