--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,7 +1,6 @@
 openmediavault (4.0.2) stable; urgency=low
 
   * Various improvements.
-  * Fix bug when executing S.M.A.R.T. tests via WebUI.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 24 Feb 2017 10:45:58 +0100
 
@@ -18,11 +17,19 @@ openmediavault (4.0) stable; urgency=low
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 22 Feb 2017 13:28:40 +0100
 
-openmediavault (3.0.64) stable; urgency=low
+ openmediavault (3.0.65) stable; urgency=low
 
-  * Fix bug when a non-existent file system will be removed.
+   * Various bug fixes and improvements.
+   * Fix bug when executing S.M.A.R.T. tests via WebUI.
 
- -- Volker Theile <volker.theile@openmediavault.org>  Mon, 20 Feb 2017 17:42:58 +0100
+  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 24 Feb 2017 13:34:27 +0100
+
+ openmediavault (3.0.64) stable; urgency=low
+
+   * Various improvements.
+   * Fix bug when a non-existent file system will be removed.
+
+  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 20 Feb 2017 17:42:58 +0100
 
 openmediavault (3.0.63) stable; urgency=low
 
