--- a/deb/openmediavault-usbbackup/debian/changelog
+++ b/deb/openmediavault-usbbackup/debian/changelog
@@ -1,9 +1,7 @@
 openmediavault-usbbackup (3.2.15) stable; urgency=low
 
   * Various improvements.
-  * Mantis 0001684: Fix bug when running backup jobs via WebUI. Jobs to be
-    executed via WebUI must be enabled, otherwise the required scripts do
-    not exist.
+  * Mantis 0001684: Fix bug when running backup jobs via WebUI.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 28 Feb 2017 19:45:39 +0100
 
