--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -4,6 +4,7 @@ openmediavault (3.0.65) stable; urgency=low
   * Fix bug when executing S.M.A.R.T. tests via WebUI.
   * Fix the PHP5 interpreter issue. This will fix problems when PHP7 is
     installed in parallel.
+  * Mantis 0001691: Failed to submit test email with secondary email address.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 24 Feb 2017 13:34:27 +0100
 
