--- a/deb/openmediavault-forkeddaapd/debian/changelog
+++ b/deb/openmediavault-forkeddaapd/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-forkeddaapd (3.1.7) stable; urgency=low
+
+  * Mantis 0001692: Fix bug causing a fatal error.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 05 Mar 2017 22:13:56 +0100
+
 openmediavault-forkeddaapd (3.1.6) stable; urgency=low
 
   * Fix first installation bug.
