--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -3,6 +3,8 @@ openmediavault (3.0.66) stable; urgency=low
   * Fix /root/.ssh/id_rsa issue in debian/openmediavault.postinst script.
   * Reduce unnecessary restarts of nginx. Thanks to kochinc for the improvement.
   * Allow using spaces in path names.
+  * Mantis 0001696: Failing hostname --fqdn should not cause web interface
+    login failure.
   * Mantis 0001697: NFS bind not mounted when adding new share.
   * Mantis 0001698: Fix error when removing a NFS share.
 
