--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (3.0.66) stable; urgency=low
 
+  * Update locales.
   * Fix /root/.ssh/id_rsa issue in debian/openmediavault.postinst script.
   * Reduce unnecessary restarts of nginx. Thanks to kochinc for the improvement.
   * Allow using spaces in path names.
