--- a/deb/openmediavault-clamav/debian/changelog
+++ b/deb/openmediavault-clamav/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-clamav (3.2.11) stable; urgency=low
+
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 17 Mar 2017 11:08:11 +0100
+
 openmediavault-clamav (3.2.10) stable; urgency=low
 
   * Various improvements.
