--- a/deb/openmediavault-netatalk/debian/changelog
+++ b/deb/openmediavault-netatalk/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-netatalk (3.2.8) stable; urgency=low
+
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 17 Mar 2017 11:13:02 +0100
+
 openmediavault-netatalk (3.2.7) stable; urgency=low
 
   * Fix first installation bug.
