--- a/deb/openmediavault-route/debian/changelog
+++ b/deb/openmediavault-route/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-route (3.1.4) stable; urgency=low
+
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 17 Mar 2017 11:14:57 +0100
+
 openmediavault-route (3.1.3) stable; urgency=low
 
   * Fix first installation bug.
