--- a/deb/openmediavault-usbbackup/debian/changelog
+++ b/deb/openmediavault-usbbackup/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-usbbackup (3.2.16) stable; urgency=low
+
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 17 Mar 2017 11:16:18 +0100
+
 openmediavault-usbbackup (3.2.15) stable; urgency=low
 
   * Various improvements.
