--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.67) stable; urgency=low
+
+  * Improve foreign content handling.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 17 Mar 2017 09:59:46 +0100
+
 openmediavault (3.0.66) stable; urgency=low
 
   * Update locales.
