--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -17,9 +17,24 @@ openmediavault (4.0) stable; urgency=low
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 22 Feb 2017 13:28:40 +0100
 
+openmediavault (3.0.67) stable; urgency=low
+
+  * Improve foreign content handling.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 17 Mar 2017 09:59:46 +0100
+
 openmediavault (3.0.66) stable; urgency=low
 
+  * Update locales.
   * Fix /root/.ssh/id_rsa issue in debian/openmediavault.postinst script.
+  * Reduce unnecessary restarts of nginx. Thanks to kochinc for the improvement.
+  * Allow using spaces in path names.
+  * Detect disk size change as well when scanning for new devices. Thanks
+    to ZsZs73 for this contribution.
+  * Mantis 0001696: Failing hostname --fqdn should not cause web interface
+    login failure.
+  * Mantis 0001697: NFS bind not mounted when adding new share.
+  * Mantis 0001698: Fix error when removing a NFS share.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 07 Mar 2017 22:48:28 +0100
 
