--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -20,6 +20,7 @@ openmediavault (4.0) stable; urgency=low
 openmediavault (3.0.67) stable; urgency=low
 
   * Improve foreign content handling.
+  * Mantis 0001701: Switch back to NTP daemon.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 17 Mar 2017 09:59:46 +0100
 
