--- a/deb/openmediavault-clamav/debian/changelog
+++ b/deb/openmediavault-clamav/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-clamav (3.3) stable; urgency=low
+
+  * Improve the datamodel to be able to resolve shared folder references.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 26 Mar 2017 18:35:58 +0200
+
 openmediavault-clamav (3.2.11) stable; urgency=low
 
   * Various improvements.
