--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -5,6 +5,7 @@ openmediavault (3.0.68) stable; urgency=low
   * Do not use /etc/fstab entries like UUID=<xxx> anymore because this
     will make problems with LV/BTRFS snapshots. Use /dev/disk/by-xxx/xxx
     device files instead.
+  * Improve the datamodel to be able to resolve shared folder references.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 20 Mar 2017 12:38:22 +0100
 
