--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -2,6 +2,7 @@ openmediavault (3.0.69) stable; urgency=low
 
   * Display short device names, e.g. /dev/sdX, in the UI, but use predictable
     device files in the backend, database and config files.
+  * Fix issues related to new mount point schema.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 31 Mar 2017 20:31:36 +0200
 
