Mantis 0001716: Fix bug in /etc/nut/upsd.users.

--- a/deb/openmediavault-nut/debian/changelog
+++ b/deb/openmediavault-nut/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-nut (3.2.11) stable; urgency=low
+
+  * Mantis 0001716: Fix bug in /etc/nut/upsd.users.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 10 Apr 2017 17:03:55 +0200
+
 openmediavault-nut (3.2.10) stable; urgency=low
 
   * Modify monit configuration to be able to monitor the process status.
